Fix with icons' sprite and hot-icon color

--- a/dest/components/catalog.list/template.html
+++ b/dest/components/catalog.list/template.html
@@ -37,22 +37,24 @@
   </div>
 </div>
 <div class="b-estate-list"><a href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__props">Aeroflots<br/><span>Ул. Викторенко, 16, Москва,  Росссия</span><span class="b-estate-list__i__label"><span class="b-estate-list__i__count">80</span><br/>Объектов<span class="b-estate-list__i__folder-icon"></span></span></span><span class="b-estate-list__i__info"><span class="b-estate-list__i__info-title">Aeroflots</span><br/><span>Ул. Викторенко, 16, Москва,  Росссия</span><b>Площадь</b><span>300 м<sup>2</sup></span><b>Комнат</b><span>4</span><b>Продажа</b><span>от 3 000 000 руб</span><b>Аренда</b><span>от 200 000 руб</span><span class="b-estate-list__i__info-icons">
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--fit"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--shop"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--beauty"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--edu"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--restor"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--med"></div></span></span></a><a href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__props">Квартира, F113<br/><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><br/><span>8 000 000 руб.</span></span><span class="b-estate-list__i__info"><span class="b-estate-list__i__info-title">Квартира, F113</span><br/><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><br/><b>Площадь</b><br/><span>189,9 м<sup>2</sup></span><br/><b>Комнат</b><span>4</span><br/><b>Продажа</b><span>59 000 000 руб</span><span class="b-estate-list__i__info-icons">
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--fit"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--shop"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--beauty"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--edu"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--restor"></div></span></span></a><a href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__hot"><span class="b-estate-list__i__hot-icon"></span>Горячее</span><span class="b-estate-list__i__props">Квартира, F113<br/><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><br/><span>8 000 000 руб.</span></span><span class="b-estate-list__i__info"><span class="b-estate-list__i__info-title">Квартира, F113</span><br/><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><br/><b>Площадь</b><br/><span>189,9 м<sup>2</sup></span><br/><b>Комнат</b><span>4</span><br/><b>Продажа</b><span>59 000 000 руб</span><span class="b-estate-list__i__info-icons">
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--fit"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--shop"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--beauty"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--edu"></div>
-        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--restor"></div></span></span></a>
+        <div style="background-image: url( /upload/catalog.list/fit.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/shop.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/beauty.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/edu.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/restor.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/med.png); " class="b-estate-list__i__info-icon"></div></span></span></a><a href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__props">Квартира, F113<br/><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><span>8 000 000 руб.</span></span><span class="b-estate-list__i__info"><span class="b-estate-list__i__info-title">Квартира, F113</span><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><b>Площадь</b><span>189,9 м<sup>2</sup></span><b>Комнат</b><span>4</span><b>Продажа</b><span>59 000 000 руб</span><span class="b-estate-list__i__info-icons">
+        <div style="background-image: url( /upload/catalog.list/fit.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/shop.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/beauty.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/edu.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/restor.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/med.png); " class="b-estate-list__i__info-icon"></div></span></span></a><a href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span style="background-color: #ff4242;" class="b-estate-list__i__hot"><span class="b-estate-list__i__hot-icon"></span>Горячее</span><span class="b-estate-list__i__props">Квартира, F113<br/><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><span>8 000 000 руб.</span></span><span class="b-estate-list__i__info"><span class="b-estate-list__i__info-title">Квартира, F113</span><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><b>Площадь</b><span>189,9 м<sup>2</sup></span><b>Комнат</b><span>4</span><b>Продажа</b><span>59 000 000 руб</span><span class="b-estate-list__i__info-icons">
+        <div style="background-image: url( /upload/catalog.list/fit.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/shop.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/beauty.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/edu.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/restor.png); " class="b-estate-list__i__info-icon"></div>
+        <div style="background-image: url( /upload/catalog.list/med.png); " class="b-estate-list__i__info-icon"></div></span></span></a>
   <!--  while n > 0-->
   <!--    - n---->
   <!--    a.b-estate-list__i( href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" )-->
