--- a/source/components/catalog.list/template.jade
+++ b/source/components/catalog.list/template.jade
@@ -33,12 +33,12 @@ include ./filter
             b Аренда
             span от 200 000 руб
             span.b-estate-list__i__info-icons
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--fit
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--shop
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--beauty
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--edu
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--restor
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--med
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/fit.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/shop.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/beauty.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/edu.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/restor.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/med.png); " )
 
     a.b-estate-list__i( href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" )
         img.b-estate-list__i__img-bw( src="/template/images/tr.gif" )
@@ -59,17 +59,18 @@ include ./filter
             b Продажа
             span 59 000 000 руб
             span.b-estate-list__i__info-icons
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--fit
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--shop
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--beauty
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--edu
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--restor
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/fit.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/shop.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/beauty.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/edu.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/restor.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/med.png); " )
 
 
     a.b-estate-list__i( href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" )
         img.b-estate-list__i__img-bw( src="/template/images/tr.gif" )
         img.b-estate-list__i__img( src="/template/images/tr.gif" )
-        span.b-estate-list__i__hot
+        span.b-estate-list__i__hot( style="background-color: #ff4242;" )
             span.b-estate-list__i__hot-icon
             | Горячее
         span.b-estate-list__i__props
@@ -88,11 +89,12 @@ include ./filter
             b Продажа
             span 59 000 000 руб
             span.b-estate-list__i__info-icons
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--fit
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--shop
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--beauty
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--edu
-                div.b-estate-list__i__info-icon.b-estate-list__i__info-icon--restor
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/fit.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/shop.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/beauty.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/edu.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/restor.png); " )
+                div.b-estate-list__i__info-icon( style="background-image: url( /upload/catalog.list/med.png); " )
 
     //- var n = 5
     //  while n > 0
