Hot icon - to HTML

--- a/dest/components/catalog.list/style.css
+++ b/dest/components/catalog.list/style.css
@@ -390,7 +390,8 @@
   right: 0;
 }
 span.b-estate-list__i__hot-icon {
-  background: url("/template/images/icons/fire.png") no-repeat;
+  background-repeat: no-repeat;
+  background-position: 0 0;
   width: 16px;
   height: 24px;
   display: inline-block;
