--- a/source/components/catalog.list/style.styl
+++ b/source/components/catalog.list/style.styl
@@ -182,7 +182,8 @@
       right 0
 
       span&-icon
-        background: url("/template/images/icons/fire.png") no-repeat;
+        background-repeat: no-repeat
+        background-position 0 0
         width: 16px
         height: 24px
         display: inline-block
