--- a/source/components/catalog.list/template.jade
+++ b/source/components/catalog.list/template.jade
@@ -71,7 +71,7 @@ include ./filter
         img.b-estate-list__i__img-bw( src="/template/images/tr.gif" )
         img.b-estate-list__i__img( src="/template/images/tr.gif" )
         span.b-estate-list__i__hot( style="background-color: #ff4242;" )
-            span.b-estate-list__i__hot-icon
+            span.b-estate-list__i__hot-icon( style="background-image: url(/upload/icons/fire.png)" )
             | Горячее
         span.b-estate-list__i__props
             | Квартира, F113
