--- a/source/components/catalog.gallery/style.styl
+++ b/source/components/catalog.gallery/style.styl
@@ -57,3 +57,29 @@
     height: 0 !important;
   }
 }
+
+.b-estate .fotorama__nav-wrap
+  display none
+  
+.fotorama
+
+  .fotorama__arr
+    width 53px
+    height 53px
+    background-size cover
+    
+  .fotorama__arr--next
+    background embedurl( 'img/right-arrow.svg' ) no-repeat center
+    right 15px
+    
+  .fotorama__arr--prev
+    background embedurl( 'img/left-arrow.svg' ) no-repeat center
+    left 15px
+    
+  &--fullscreen .fotorama__fullscreen-icon
+    width 32px
+    height 32px
+    background embedurl( 'img/close.svg' ) no-repeat center !important
+    background-size cover
+    top 20px
+    right 20px
