--- a/source/layouts/estate.jade
+++ b/source/layouts/estate.jade
@@ -1,5 +1,5 @@
 ﻿doctype html
-html
+html( lang="ru" )
   head
     block title
       title whest
@@ -16,7 +16,7 @@ html
         .b-block-a.i-reverse
           include ../components/catalog.list.small/template
         .b-block-b.i-reverse
-          include includes/header.jade
+          include includes/header-estate.jade
           block content
             .b-content
               h1 Main template
