--- a/source/modules/slide-panel/include.jade
+++ b/source/modules/slide-panel/include.jade
@@ -1,6 +1,11 @@
 ﻿.b-side
   
   .b-side-icons
+
+    .b-logo
+      a.b-logo__title( href="/" )
+        img( src="/upload/logo-buro-77.svg" width="111" height="47" alt="" )
+      
     a#sideBarButton.b-side-bar__button( href="#sidePanel" )
   
     span#sideBarTop.b-side-bar__top наверх
