--- a/source/styl/grid.styl
+++ b/source/styl/grid.styl
@@ -259,3 +259,13 @@
         width: 8.33333333%
     }
 }
+
+.visible-lg-block, .visible-lg-inline, .visible-lg-inline-block, .visible-md-block, .visible-md-inline, .visible-md-inline-block, .visible-sm-block, .visible-sm-inline, .visible-sm-inline-block, .visible-xs-block, .visible-xs-inline, .visible-xs-inline-block {
+    display: none!important;
+}
+
+@media (max-width: 767px) {
+  .visible-xs-block {
+      display: block!important;
+  }
+}
