--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -9,6 +9,9 @@
   @media (min-width: 540px)
     background-image none
     
+img
+  vertical-align top
+    
 a
   color #fff
   text-decoration none
@@ -22,16 +25,16 @@ b
   font-weight 700
 
 p
-  margin 30px 0
+  margin 0
 
 h1, h2, h3, h4, h5, h6
   font-family $font
-  font-weight 100
+  font-weight 400
 
 h1
-  font-size 36pt
+  font-size 26pt
   line-height $line-height-sm
-  margin 0 0 50px
+  margin 0 0 25px
   
   @media( max-width $breakpoint-mobile )
     font-size 18pt
@@ -53,6 +56,9 @@ hr
   padding 0
   border 0
   height 1px
+  
+  &.i-size-S
+    margin 10px 0
 
 ul, ol
   margin 20px 0 20px 27px
@@ -241,7 +247,7 @@ ul
   display block
   width 37px
   height 35px
-  background embedurl("img/favorite-link.png") no-repeat 0 0
+  background embedurl("img/heart.svg") no-repeat 0 0
   position relative
   
   &__num
@@ -255,8 +261,7 @@ ul
     color #fff
     font-size 9pt
     background-color #8877aa
-    border-radius 10px
-    -webkit-border-radius 10px
+    border-radius 51%
     
 .b-table
   width 100%
