--- a/dest/components/catalog.element/template.html
+++ b/dest/components/catalog.element/template.html
@@ -2,83 +2,97 @@
 <!-- start /components/catalog.element/-->
 <link rel="stylesheet" href="/components/catalog.element/style.css"/>
 <script src="/components/catalog.element/script.js"></script>
-<div class="b-estate">
-  <h1>Двухуровневая квартира общ. пл. 1040 кв.м., свободная планировка</h1>
-  <div class="b-estate__bar">
-    <!-- start /components/favorite/-->
-    <link rel="stylesheet" href="/components/favorite/style.css"/>
-    <script src="/components/favorite/script.js"></script><a href="/components/favorite/send.json?id=456" title="Добавить в избранное" class="b-favorite-icon"></a><a href="/components/favorite/send.json?id=456" title="Убрать из избранного" class="b-favorite-icon i-on"></a>
-    <!-- end /components/favorite/--><a href="#" target="_blank" class="b-address-link"><span class="b-address-link__text">Россия, Москва, Молочный переулок, дом 3</span></a>
-  </div>
-  <div class="b-row b-estate__props">
-    <div class="b-col-xs-2">
-      <h5>Лот</h5>560746
-    </div>
-    <div class="b-col-xs-2">
-      <h5>Площадь</h5>72-213 м<sup>2</sup>
-    </div>
-    <div class="b-col-xs-2">
-      <h5>Этаж</h5>3
-    </div>
-    <div class="b-col-xs-2">
-      <h5>Комнат</h5>3
-    </div>
-    <div class="b-col-xs-2">
-      <h5>Цена</h5>Договор
-    </div>
-  </div>
-  <hr/>
+<div itemscope="itemscope" itemtype="http://schema.org/Residence" class="b-estate">
   <!-- start /components/catalog.gallery/-->
   <link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.css" rel="stylesheet"/>
   <link rel="stylesheet" href="/components/catalog.gallery/style.css"/>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.js"></script>
-  <div data-width="100%" data-ratio="3/2" data-loop="true" data-nav="thumbs" class="fotorama"><img src="/upload/gallery/1.jpg"/><img src="/upload/gallery/2.jpg"/><img src="/upload/gallery/3.jpg"/><img src="/upload/gallery/4.jpg"/><img src="/upload/gallery/5.jpg"/><img src="/upload/gallery/6.jpg"/><img src="/upload/gallery/7.jpg"/><img src="/upload/gallery/8.jpg"/><img src="/upload/gallery/9.jpg"/>
+  <div data-width="100%" data-ratio="3/2" data-loop="true" class="fotorama"><img src="/upload/gallery/1.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/2.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/3.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/4.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/5.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/6.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/7.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/8.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/9.jpg" alt="" itemprop="photo"/>
   </div>
   <!-- end /components/catalog.gallery/-->
   <hr/>
-  <button id="toContactForm" class="i-theme-b">Оставить заявку</button>
-  <hr/>
-  <div class="description">
-    <p>В небольшой клубном доме напротив Зачатьевского монастыря в продажу предлагается просторная двухуровневая квартира на 2-м и 3-м этажах общей площадью 1040 кв.м.</p>
-    <p>Из окон открываются чудесные виды на Храм и тихие переулки Остоженки. </p>Квартиру можно разделить как по вертикали, так и по горизонтали. 
-    Минимальная площадь покупки - 260 кв.м. Есть возможность покупки как полностью 2 и 3 этажа, так и отдельно. Площади, соответственно по 520 м (этаж).
-    Также, есть возможность приобрести машиноместа в подземном паркинге.
-  </div>
-  <hr/>
-  <table class="b-data-table">
-    <colgroup>
-      <col class="name"/>
-      <col class="value"/>
-    </colgroup>
-    <thead>
-      <tr>
-        <th>Параметр</th>
-        <th>Значение</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th>Район</th>
-        <td>Остоженка</td>
-      </tr>
-      <tr>
-        <th>Метро</th>
-        <td>Кропоткинская, Парк Культуры</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr/>
-  <div class="b-estate__plan">
-    <h2>Планировка</h2>
-    <figure><img src="/upload/estates/plan.gif"/></figure>
-  </div>
-  <hr/>
-  <div class="b-estate__map">
-    <h2>Схема проезда</h2>
-    <div class="i-border">
-      <script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=Wa3Q9dYruHRftSb8fWLAeirmyIIPq9wD&amp;amp;width=100%&amp;amp;height=450"></script>
+  <div id="estateAbout" class="b-estate-about">
+    <h1>Квартиры в I'M квартал</h1>
+    <div class="b-row b-estate__props">
+      <div class="b-col-sm-4"><img src="/upload/estate-prop/1.png" width="100" height="100" alt=""/>
+        <h5 itemprop="amenityFeature">Собственный сад в голландском стиле Hyco Verhaagen.</h5>
+      </div>
+      <div class="b-col-sm-4"><img src="/upload/estate-prop/2.png" width="100" height="100" alt=""/>
+        <h5 itemprop="amenityFeature">Эксклюзивный дизайн AEDAS. </h5>
+      </div>
+      <div class="b-col-sm-4"><img src="/upload/estate-prop/3.png" width="100" height="100" alt=""/>
+        <h5 itemprop="amenityFeature">Clubhouse — уникальный сервис для проведения деловых встреч.</h5>
+      </div>
+    </div>
+    <hr/>
+    <div itemprop="review" class="description">
+      <h2>Квартиры и апартаменты в ЖК I’M</h2>
+      <p>Buro 77 представляет квартиры и апартаменты, а также коммерческие помещения в жилом комплексе I’M.</p>
+      <p>I’M — элитный жилой квартал, расположен на Шлюзовой набережной, с видом на Московский международный Дом Музыки, Swissotel Красные Холмы и набережную Москвы-реки. Квартал состоит из двух элегантных 6-7-этажных строений.</p>
+      <p>В жилом квартале предусмотрена просторная внутренняя территория площадью 1 гектар, где будет создан роскошный сад с зонами для активного и спокойного отдыха.</p>
+      <p>Впервые в Москве жителям жилого квартала будет предложен уникальный сервис — Clubhouse, который будет включать в себя библиотеку, домашний кинотеатр, залы для проведения праздников, мероприятий и деловых встреч.</p>
+      <p>Контроль доступа, система видеонаблюдения, круглосуточная консьерж-служба, охрана периметра комплекса, система видеодомофонов в квартирах и апартаментах.</p>
     </div>
   </div>
-  <hr/><a href="presentation.pdf" class="b-download-panel"><span class="b-pdf-file"><span class="b-pdf-file__name">Презентация объекта<br/><span class="small">PDF 32 Мб</span></span></span></a>
+  <hr/>
+  <div id="estateData" class="b-estate-data">
+    <h2>Данные жилого комплекса I’M квартал</h2>
+    <table class="b-data-table">
+      <colgroup>
+        <col class="name"/>
+        <col class="value"/>
+      </colgroup>
+      <tbody>
+        <tr>
+          <th>Год постройки (срок сдачи ГК, ввода в эксплуатацию)</th>
+          <td>2018</td>
+        </tr>
+        <tr>
+          <th>Инфраструктура района</th>
+          <td>Инфраструктура квартала полностью соответствует классу объект и включает: медицинский центр, спа-салон, частный детский сад на 45 мест, кафе и другие сервисы.</td>
+        </tr>
+        <tr>
+          <th>Адрес</th>
+          <td itemprop="address">Улица, дом</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <hr/>
+  <div id="estateProgress">
+    <h2>Текущий этап строительства I’M квартал</h2>
+    <div class="b-estate-progressbar">
+      <div class="b-estate-progressbar__percent">70</div>
+    </div>
+    <div class="b-row b-estate__props">
+      <div class="b-col-sm-4"><img src="/upload/estate-prop/1.png" width="100" height="100" alt=""/>
+        <h5>Онлайн камера строительства ЖК i’M квартал.</h5>
+      </div>
+      <div class="b-col-sm-4"><img src="/upload/estate-prop/2.png" width="100" height="100" alt=""/>
+        <h5>Проектная декларация I'M.</h5>
+      </div>
+    </div>
+  </div>
+  <hr/>
+  <div id="estatePlan" class="b-estate__plan">
+    <h2>Планировки i’M квартал</h2>
+    <figure>
+      <div class="b-row">
+        <div class="b-col-sm-4"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"/></div>
+        <hr class="visible-xs-block i-size-S"/>
+        <div class="b-col-sm-4"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"/></div>
+        <hr class="visible-xs-block i-size-S"/>
+        <div class="b-col-sm-4"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"/></div>
+      </div>
+      <hr class="i-size-S"/>
+      <div class="b-row">
+        <div class="b-col-sm-4"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"/></div>
+        <hr class="visible-xs-block i-size-S"/>
+        <div class="b-col-sm-4"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"/></div>
+        <hr class="visible-xs-block i-size-S"/>
+        <div class="b-col-sm-4"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"/></div>
+      </div>
+    </figure>
+  </div>
 </div>
 <!-- end /components/catalog.element/-->
