--- a/source/components/catalog.element/style.styl
+++ b/source/components/catalog.element/style.styl
@@ -14,11 +14,8 @@ $breakpoint = 400px
       height 0
       visibility hidden
     
-    
     .b-favorite-icon
       float right
-    
-  
   
   &__props
     line-height $line-height-sm
@@ -26,57 +23,55 @@ $breakpoint = 400px
     margin-left: 0;
     
     @media( min-width $breakpoint )
-      border-top 1px solid $border-color
-      border-bottom 1px solid $border-color
       background embedurl( 'img/prop-border.gif' ) repeat-y 0 0
       font-size $font-size-bs
-    
   
-    .b-col-xs-2
-      width: 20%;
-      text-align center
-      background embedurl( 'img/prop-border.gif' ) repeat-y right 0
-      padding 20px 10px
-      white-space nowrap
+    .b-col-sm-4
+      display flex
+      justify-content flex-start
+      align-items center
+      padding 0 15px 0 0
       overflow hidden
       text-overflow ellipsis
+      background embedurl( 'img/prop-border.gif' ) repeat-y right 0 #fff
+      
+      &:nth-child( 3n )
+        background-image none
       
       @media( max-width $breakpoint )
-        background none
-        float none
-        width 100%
-        text-align left
-        padding 10px 0
-        white-space normal
-      
-    
+        border-bottom 1px solid #ececec
     
     h5
-      margin 0 0 5px
-      
-      @media( min-width $breakpoint )
-        margin 0 0 20px
-        white-space nowrap
-        overflow hidden
-        text-overflow ellipsis
-      
-    
-    
-  
+      margin 10px 0 10px 10px
+      font-size 9pt
   
   &__plan
   
     figure
-      background #f7f7f7
+      background #fff
       padding 30px
       margin 0
       text-align center
       
       img
-        max-width 100%
+        width 100%
     
-  
-
+  &-progressbar
+    background-color #3b88be
+    margin-bottom 5px
+    
+    &__percent
+      background-color #b19f83
+      width 0
+      height 33px
+      color #fff
+      font-size 9pt
+      line-height 33px
+      text-align right
+      padding-right 16px
+      box-sizing border-box
+      transition( width 0.7s cubic-bezier(0.175, 0.885, 0.320, 1.275) )
+      
 
 #estateMap
   height 470px
