--- a/source/components/catalog.gallery/template.jade
+++ b/source/components/catalog.gallery/template.jade
@@ -15,11 +15,10 @@ script( src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.js" )
       li
         img( src="/upload/gallery/#{n}.jpg" )
         
-        
-.fotorama( data-width="100%" data-ratio="3/2" data-loop="true" data-nav="thumbs" )
+.fotorama( data-width="100%" data-ratio="3/2" data-loop="true" )
   - var n = 0
   while n < 9
     - n++
-    img( src="/upload/gallery/#{n}.jpg" )
+    img( src="/upload/gallery/#{n}.jpg" alt="" itemprop="photo" )
 
 // end /components/catalog.gallery/
