--- a/source/components/catalog.list.small/template.jade
+++ b/source/components/catalog.list.small/template.jade
@@ -7,8 +7,8 @@ script( src="/components/catalog.list.small/script.js" )
   
   .b-el-small__wrapper
     //span.b-el-small__i
-      img.b-el-small__i__img-bw( src="/upload/estates/2-bw.jpg" )
-      img.b-el-small__i__img( src="/upload/estates/2.jpg" )
+      img.b-el-small__i__img-bw( src="/upload/estates/2-bw.jpg" alt="" )
+      img.b-el-small__i__img( src="/upload/estates/2.jpg" alt="" )
       span.b-el-small__i__shutter
       span.b-el-small__i__props
         span F1008
@@ -20,8 +20,8 @@ script( src="/components/catalog.list.small/script.js" )
     while n > 0
       - n--
       a.b-el-small__i( href="/estate/" )
-        img.b-el-small__i__img-bw( src="/upload/estates/3-bw.jpg" )
-        img.b-el-small__i__img( src="/upload/estates/3.jpg" )
+        img.b-el-small__i__img-bw( src="/upload/estates/3-bw.jpg" alt="" )
+        img.b-el-small__i__img( src="/upload/estates/3.jpg" alt="" )
         span.b-el-small__i__shutter
         span.b-el-small__i__props
           span F1008
