--- a/source/styl/vars.styl
+++ b/source/styl/vars.styl
@@ -13,7 +13,7 @@ $grid-gap = 25px
 
 
 $font = "Open Sans", Helvetica, Arial, serif
-$font-size-bs = 13.5pt
+$font-size-bs = 12pt
 $font-size-sm = 10.5pt
 $font-size-xs = 9pt
 $font-size-xxs = 8pt
@@ -24,7 +24,7 @@ $header-bg = #ececec
 $content-bg = $header-bg
 $border-color = #cdcdcd
 
-$line-height-lg = 1.72857143
+$line-height-lg = 1.9
 $line-height-sm = 1.3
 
 $breakpoint-mobile = 575px//520px
