--- a/source/components/catalog.gallery/style.styl
+++ b/source/components/catalog.gallery/style.styl
@@ -83,3 +83,14 @@
     background-size cover
     top 20px
     right 20px
+    
+.fotorama--fullscreen .fotorama__img
+  width auto !important
+  height 70% !important
+  top 50% !important
+  left 50% !important
+  margin -20% 0 0 -30% !important
+  
+.fotorama--fullscreen .fotorama__stage,
+.fotorama--fullscreen
+  background rgba( 0,0,0,.5 ) !important
