--- a/markup/components/catalog.gallery/template.html
+++ b/markup/components/catalog.gallery/template.html
@@ -3,6 +3,6 @@
 <link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.css" rel="stylesheet"/>
 <link rel="stylesheet" href="/components/catalog.gallery/style.css"/>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.js"></script>
-<div data-width="100%" data-ratio="3/2" data-loop="true" class="fotorama"><img src="/upload/gallery/1.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/2.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/3.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/4.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/5.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/6.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/7.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/8.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/9.jpg" alt="" itemprop="photo"/>
+<div data-width="100%" data-ratio="3/2" data-loop="true" data-allowfullscreen="true" class="fotorama"><img src="/upload/gallery/1.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/2.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/3.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/4.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/5.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/6.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/7.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/8.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/9.jpg" alt="" itemprop="photo"/>
 </div>
 <!-- end /components/catalog.gallery/-->
