--- a/source/components/catalog.gallery/template.jade
+++ b/source/components/catalog.gallery/template.jade
@@ -15,7 +15,7 @@ script( src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.js" )
       li
         img( src="/upload/gallery/#{n}.jpg" )
         
-.fotorama( data-width="100%" data-ratio="3/2" data-loop="true" )
+.fotorama( data-width="100%" data-ratio="3/2" data-loop="true" data-allowfullscreen="true" )
   - var n = 0
   while n < 9
     - n++
