--- a/source/modules/slide-panel/style.styl
+++ b/source/modules/slide-panel/style.styl
@@ -186,6 +186,7 @@
     display block
     border-bottom 1px solid rgba( 255,255,255,0.1 )
     padding 15px 0 11px
+    text-align center
   
     img
       ib()
