--- a/source/styl/header.styl
+++ b/source/styl/header.styl
@@ -18,9 +18,14 @@
   
   @media ( max-width $breakpoint-mobile)
     margin-top 45px
-    padding 35px 20px
+    padding 35px 20px !important
     min-height 0
     text-align center
+    
+  &:after
+    content ''
+    clear both
+    display table
     
 .b-phone
   float right
@@ -29,23 +34,33 @@
   font-size 9pt
   font-weight 700
   color #e5241f !important
-  
+  width 20%
     
-  @media ( max-width $breakpoint-mobile )
+  @media ( max-width 767px )
     display none
     
 a.b-estate-logo
   display block
   float left
-  margin -5px 30px 0 0
+  margin -5px 0 0 0
+  width 15%
+  
+  @media ( max-width 767px )
+    width 25%
   
   @media ( max-width $breakpoint-mobile )
     margin 0 0 20px
     float none
+    width auto
     
 .b-top-menu
   float left
-  line-height 42px
+  width 65%
+  min-height 42px
+  display flex
+  justify-content flex-start
+  align-items center
+  flex-wrap wrap
   
   a,
   span
@@ -55,8 +70,12 @@ a.b-estate-logo
     margin-right 24px
     display inline-block
     vertical-align middle
+  
+  @media ( max-width 767px )
+    width 75%
     
   @media ( max-width $breakpoint-mobile )
     float none
     line-height 20px
-    
+    width auto
+    justify-content center
