Estate page galleries

--- a/source/components/catalog.element/template.jade
+++ b/source/components/catalog.element/template.jade
@@ -86,36 +86,6 @@ script( src="/components/catalog.element/script.js" )
     
     figure
     
-      .b-row
-  
-        .b-col-sm-4
-          img( src="/upload/estate-plan.jpg" alt="" itemprop="photo" )
-          
-        hr.visible-xs-block.i-size-S
-  
-        .b-col-sm-4
-          img( src="/upload/estate-plan.jpg" alt="" itemprop="photo" )
-          
-        hr.visible-xs-block.i-size-S
-  
-        .b-col-sm-4
-          img( src="/upload/estate-plan.jpg" alt="" itemprop="photo" )
-          
-      hr.i-size-S
-    
-      .b-row
-  
-        .b-col-sm-4
-          img( src="/upload/estate-plan.jpg" alt="" itemprop="photo" )
-          
-        hr.visible-xs-block.i-size-S
-  
-        .b-col-sm-4
-          img( src="/upload/estate-plan.jpg" alt="" itemprop="photo" )
-          
-        hr.visible-xs-block.i-size-S
-  
-        .b-col-sm-4
-          img( src="/upload/estate-plan.jpg" alt="" itemprop="photo" )
+      include ../../components/catalog.gallery/plan
   
 // end /components/catalog.element/
