--- a/source/components/catalog.element/template.jade
+++ b/source/components/catalog.element/template.jade
@@ -87,5 +87,63 @@ script( src="/components/catalog.element/script.js" )
     figure
     
       include ../../components/catalog.gallery/plan
+      
+  hr
+  
+  #estatePrice.b-estate__price
+      
+    h2 Цены I'm квартал на Садовом
+    
+    table.b-table
+      thead
+        tr
+          th
+          th Лот
+          th Этаж
+          th Площадь
+          th Цена
+      tbody
+        tr(onclick="window.location.href='/objects/i-m-kvartal-na-sadovom/'")
+          td
+            img(src='https://buro77.ruhttps://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg', width='50', height='50')
+          td S148
+          td 1
+          td коммерческая 61,3 м²
+          td
+        tr(onclick="window.location.href='/objects/i-m-SC149/'")
+          td
+            img(src='https://buro77.ruhttps://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg', width='50', height='50')
+          td S149
+          td 1
+          td 81,1 м²
+          td
+        tr(onclick="window.location.href='/objects/i-m-SC150/'")
+          td
+            img(src='https://buro77.ruhttps://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg', width='50', height='50')
+          td S150
+          td 1
+          td 88,8 м²
+          td
+        tr(onclick="window.location.href='/objects/i-m-SC151/'")
+          td
+            img(src='https://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg', width='50', height='50')
+          td S151
+          td 1
+          td 130,2 м²
+          td
+        tr(onclick="window.location.href='/objects/i-m-SC152/'")
+          td
+            img(src='https://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg', width='50', height='50')
+          td S152
+          td 1
+          td 191,3 м²
+          td
+        tr(onclick="window.location.href='/objects/i-m-kvartal-na-sadovom-SF880/'")
+          td
+            img(src='https://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg', width='50', height='50')
+          td SF880
+          td 6
+          td 137,91 м²
+          td 64 701 166 ₽
   
 // end /components/catalog.element/
