Fix for side panel

--- a/source/components/catalog.element/style.styl
+++ b/source/components/catalog.element/style.styl
@@ -34,6 +34,8 @@ $breakpoint = 400px
       overflow hidden
       text-overflow ellipsis
       background embedurl( 'img/prop-border.gif' ) repeat-y right 0 #fff
+      border-bottom 1px solid #ececec
+      height 100px
       
       &:nth-child( 3n )
         background-image none
