--- a/source/components/catalog.gallery/style.styl
+++ b/source/components/catalog.gallery/style.styl
@@ -93,7 +93,11 @@
 .fotorama__fullscreen-icon
   background embedurl( 'img/zoom.svg' ) no-repeat center !important
   mix-blend-mode difference
+  top 32px
+  right 32px
   
-.fotorama__fullscreen-icon
-  top 15px
-  right 15px
+.b-catalog-gallery__img
+  background-repeat no-repeat
+  background-position center
+  background-size cover
+  padding-top 66.67%
