--- a/markup/components/catalog.element/template.html
+++ b/markup/components/catalog.element/template.html
@@ -7,7 +7,34 @@
   <link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.css" rel="stylesheet"/>
   <link rel="stylesheet" href="/components/catalog.gallery/style.css"/>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.js"></script>
-  <div data-width="100%" data-ratio="3/2" data-loop="true" data-allowfullscreen="true" class="fotorama"><img src="/upload/gallery/1.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/2.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/3.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/4.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/5.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/6.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/7.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/8.jpg" alt="" itemprop="photo"/><img src="/upload/gallery/9.jpg" alt="" itemprop="photo"/>
+  <div data-width="100%" data-ratio="3/2" data-loop="true" data-allowfullscreen="true" class="fotorama">
+    <div>
+      <div style="background-image: url(/upload/gallery/1.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    </div>
+    <div>
+      <div style="background-image: url(/upload/gallery/2.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    </div>
+    <div>
+      <div style="background-image: url(/upload/gallery/3.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    </div>
+    <div>
+      <div style="background-image: url(/upload/gallery/4.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    </div>
+    <div>
+      <div style="background-image: url(/upload/gallery/5.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    </div>
+    <div>
+      <div style="background-image: url(/upload/gallery/6.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    </div>
+    <div>
+      <div style="background-image: url(/upload/gallery/7.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    </div>
+    <div>
+      <div style="background-image: url(/upload/gallery/8.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    </div>
+    <div>
+      <div style="background-image: url(/upload/gallery/9.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    </div>
   </div>
   <!-- end /components/catalog.gallery/-->
   <hr/>
@@ -62,16 +89,11 @@
   <div id="estateProgress">
     <h2>Текущий этап строительства I’M квартал</h2>
     <div class="b-estate-progressbar">
-      <div class="b-estate-progressbar__percent">70</div>
+      <div class="b-estate-progressbar__percent">70 %</div>
     </div>
-    <div class="b-row b-estate__props">
-      <div class="b-col-sm-4"><img src="/upload/estate-prop/1.png" width="100" height="100" alt=""/>
-        <h5>Онлайн камера строительства ЖК i’M квартал.</h5>
-      </div>
-      <div class="b-col-sm-4"><img src="/upload/estate-prop/2.png" width="100" height="100" alt=""/>
-        <h5>Проектная декларация I'M.</h5>
-      </div>
-    </div>
+    <div class="b-row b-estate__props"><a href="" class="b-col-sm-4"><img src="/upload/estate-prop/1.png" width="100" height="100" alt=""/>
+        <h5>Онлайн камера строительства ЖК i’M квартал.</h5></a><a href="" class="b-col-sm-4"><img src="/upload/estate-prop/2.png" width="100" height="100" alt=""/>
+        <h5>Проектная декларация I'M.</h5></a></div>
   </div>
   <hr/>
   <div id="estatePlan" class="b-estate__plan">
