--- a/source/components/catalog.element/template.jade
+++ b/source/components/catalog.element/template.jade
@@ -66,15 +66,15 @@ script( src="/components/catalog.element/script.js" )
     h2 Текущий этап строительства I’M квартал
     
     .b-estate-progressbar
-      .b-estate-progressbar__percent 70
+      .b-estate-progressbar__percent 70 %
 
     .b-row.b-estate__props
     
-      .b-col-sm-4
+      a.b-col-sm-4( href="" )
         img( src="/upload/estate-prop/1.png" width="100" height="100" alt="" )
         h5 Онлайн камера строительства ЖК i’M квартал.
       
-      .b-col-sm-4
+      a.b-col-sm-4( href="" )
         img( src="/upload/estate-prop/2.png" width="100" height="100" alt="" )
         h5 Проектная декларация I'M.
       
